# booker

./: .env.examples  .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/pitchbook/: __init__.py  agent_interface.py  cli.py  client.py  config.py  cookies.py  importer.py  listener.py  models.py  store.py  web.py
src/pitchbook/static/: index.html
tests/: conftest.py  test_agent_interface.py  test_client.py  test_cookies.py  test_importer.py  test_listener.py  test_models.py  test_store.py  test_web.py
