[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pitchbook-listener"
version = "0.1.0"
description = "PitchBook data listener, historical importer, and agent query interface"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27,<1",
    "pydantic>=2.0,<3",
    "pydantic-settings>=2.0,<3",
    "sqlalchemy>=2.0,<3",
    "aiosqlite>=0.20,<1",
    "anthropic>=0.40,<1",
    "click>=8.0,<9",
    "rich>=13.0,<14",
    "tenacity>=9.0,<10",
    "apscheduler>=3.10,<4",
    "python-dotenv>=1.0,<2",
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
cookies = [
    "browser-cookie3>=0.20,<1",
]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.24,<1",
    "pytest-cov>=6.0,<7",
    "ruff>=0.8,<1",
    "mypy>=1.13,<2",
    "respx>=0.22,<1",
    "httpx>=0.27,<1",
    "browser-cookie3>=0.20,<1",
]

[project.scripts]
pitchbook = "pitchbook.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pitchbook"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
